[project]
name = "gedi-endor"
version = "0.1.0"
description = "Ecological Neural Deep fusion for Earth-Observation & Restoration"
authors = [{ name = "Your Name", email = "your@email.com" }]
license = { text = "MIT" }
dependencies = [
    "numpy",
    "pandas",
    "torch",
    "scikit-learn",
    "rasterio",
    "geopandas",
    "matplotlib",
    "tqdm"
]
